[gd_scene load_steps=25 format=2]

[ext_resource path="res://Graphics/interface/bar_vie/bar_vie.png" type="Texture" id=1]
[ext_resource path="res://Graphics/interface/bar_vie/vie.png" type="Texture" id=2]
[ext_resource path="res://décor/Tower.gd" type="Script" id=3]
[ext_resource path="res://Graphics/Décors/Décor_new/Tower_red.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Décors/Décor_new/vortex_red.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Décors/Décor_new/vortex_blue.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Décors/Décor_new/Tower_deactivated.png" type="Texture" id=7]
[ext_resource path="res://Graphics/interface/tower_capture/capture_frame.png" type="Texture" id=8]
[ext_resource path="res://Graphics/interface/tower_capture/capture_progress.png" type="Texture" id=9]
[ext_resource path="res://Graphics/Décors/Décor_new/Tower_blue.png" type="Texture" id=10]
[ext_resource path="res://Graphics/interface/bar_vie/vie_blue.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Décors/Décor_new/NPC_tower_structure.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": false,
"name": "team_blue",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "team_red",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "deactivated",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "team_blue",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "team_red",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "Nouvelle animation"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "team_blue",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "team_red",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 600.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 20, 88 )

[sub_resource type="Animation" id=8]
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("offset/Tower:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("offset:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5, 5.1, 5.2, 5.3, 5.4, 5.5, 5.6, 5.7, 5.8, 5.9, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1.14571, -0.0282899 ), Vector2( 1.50982, 0.213667 ), Vector2( -1.35241, 0.110815 ), Vector2( 1.52395, -0.71084 ), Vector2( -2.00658, -0.00583625 ), Vector2( 0, 0 ), Vector2( -1.14571, -0.0282899 ), Vector2( 1.50982, 0.213667 ), Vector2( -1.35241, 0.110815 ), Vector2( 1.52395, -0.71084 ), Vector2( -2.00658, -0.00583625 ), Vector2( 0, 0 ), Vector2( -1.14571, -0.0282899 ), Vector2( 1.50982, 0.213667 ), Vector2( -1.35241, 0.110815 ), Vector2( 1.52395, -0.71084 ), Vector2( -2.00658, -0.00583625 ), Vector2( 0, 0 ), Vector2( -1.14571, -0.0282899 ), Vector2( 1.50982, 0.213667 ), Vector2( -1.35241, 0.110815 ), Vector2( 1.52395, -0.71084 ), Vector2( -2.00658, -0.00583625 ), Vector2( 0, 0 ), Vector2( -1.14571, -0.0282899 ), Vector2( 1.50982, 0.213667 ), Vector2( -1.35241, 0.110815 ), Vector2( 1.52395, -0.71084 ), Vector2( -2.00658, -0.00583625 ), Vector2( 0, 0 ), Vector2( -1.14571, -0.0282899 ), Vector2( 1.50982, 0.213667 ), Vector2( -1.35241, 0.110815 ), Vector2( 1.52395, -0.71084 ), Vector2( -2.00658, -0.00583625 ), Vector2( 0, 0 ), Vector2( -1.14571, -0.0282899 ), Vector2( 1.50982, 0.213667 ), Vector2( -1.35241, 0.110815 ), Vector2( 1.52395, -0.71084 ), Vector2( -2.00658, -0.00583625 ), Vector2( 0, 0 ), Vector2( -1.14571, -0.0282899 ), Vector2( 1.50982, 0.213667 ), Vector2( -1.35241, 0.110815 ), Vector2( 1.52395, -0.71084 ), Vector2( -2.00658, -0.00583625 ), Vector2( 0, 0 ), Vector2( -1.14571, -0.0282899 ), Vector2( 1.50982, 0.213667 ), Vector2( -1.35241, 0.110815 ), Vector2( 1.52395, -0.71084 ), Vector2( -2.00658, -0.00583625 ), Vector2( 0, 0 ), Vector2( -1.14571, -0.0282899 ), Vector2( 1.50982, 0.213667 ), Vector2( -1.35241, 0.110815 ), Vector2( 1.52395, -0.71084 ), Vector2( -2.00658, -0.00583625 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "shoot"
length = 1.5
loop = true

[sub_resource type="CapsuleShape2D" id=10]
radius = 55.3882
height = 52.4543

[sub_resource type="Animation" id=11]
resource_name = "Capture_blue"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("capture:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("capture:fill_mode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=12]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("capture:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("capture:fill_mode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[node name="Tower" type="StaticBody2D"]
collision_layer = 524288
collision_mask = 0
script = ExtResource( 3 )

[node name="offset" type="Node2D" parent="."]

[node name="Tower" type="AnimatedSprite" parent="offset"]
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 1 )
animation = "deactivated"
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="offset/Tower"]
visible = false
show_behind_parent = true
position = Vector2( 0.5, -20 )
scale = Vector2( 0.12, 0.1 )
frames = SubResource( 2 )
animation = "team_blue"

[node name="AnimationPlayer" type="AnimationPlayer" parent="offset/Tower/AnimatedSprite"]
"anims/Nouvelle animation" = SubResource( 3 )

[node name="barre_vie" type="AnimatedSprite" parent="offset/Tower"]
position = Vector2( -1.5, -40 )
scale = Vector2( 1.5, 1 )
frames = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="vie" type="AnimatedSprite" parent="offset/Tower/barre_vie"]
position = Vector2( -8, -13 )
frames = SubResource( 5 )
animation = "team_blue"
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="shoot_check" type="Area2D" parent="offset"]
collision_layer = 0
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="offset/shoot_check"]
position = Vector2( 1.25, -50 )
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="NPC_owned" type="Sprite" parent="offset"]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.6002, 6.17577 )
shape = SubResource( 7 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 8 )
anims/shoot = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="Timer_shoot" type="Timer" parent="."]
wait_time = 1.5

[node name="activation_area" type="Area2D" parent="."]

[node name="activation_col" type="CollisionShape2D" parent="activation_area"]
position = Vector2( 1, -15 )
shape = SubResource( 10 )

[node name="anim_capture" type="AnimationPlayer" parent="activation_area"]
anims/Capture_blue = SubResource( 11 )
anims/Capture_red = SubResource( 12 )

[node name="capture" type="TextureProgress" parent="activation_area"]
visible = false
margin_left = -30.8909
margin_top = -187.052
margin_right = 65.1091
margin_bottom = -91.0518
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )
fill_mode = 5
tint_progress = Color( 0.984314, 0.0941176, 0.0941176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="offset/shoot_check" to="." method="_on_shoot_check_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_shoot" to="." method="_on_Timer_shoot_timeout"]
[connection signal="body_entered" from="activation_area" to="." method="_on_activation_area_body_entered"]
[connection signal="body_exited" from="activation_area" to="." method="_on_activation_area_body_exited"]
[connection signal="animation_finished" from="activation_area/anim_capture" to="." method="_on_anim_capture_animation_finished"]
